--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "全能头像生成小程序（带PC后台管理）",
-    "appid" : "__UNI__ECB4DCF",
+    "appid" : "__UNI__F9DD23C",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -49,7 +49,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wx703ce3666f46a11a",
+        "appid" : "wxf6a0bc2ee21f84b0",
         "setting" : {
             "urlCheck" : false,
             "minified" : false,
